--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <h5 class="fw-bold text-white mb-4">Get In Touch</h5>
-                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>IGDTUW , New Delhi, India</p>
+                        <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i> Dwarka sector-9, New Delhi, India</p>
                         <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91 1234567891</p>
                         <p class="mb-2"><i class="fa fa-envelope me-3"></i>info@cleanconnect.com</p>
                         <div class="d-flex pt-2">
